--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             <p>You can contact me using</p>
             <a href="mailto:dasa2004ivanova@gmail.com" 
             target="_blank"> <img src="image\logos_google-gmail.png" ></a>
-            <a href="t.me/nova_Diva" target="_blank"> <img src="image\logos_telegram.png" ></a>
+            <a href="https://t.me/nova_Diva" target="_blank"> <img src="image\logos_telegram.png" ></a>
             <p>You can see my works</p>
             <a href="https://github.com/DaryaIvanovaV" target="_blank"> <img src="image\github.png" ></a>
           </center>
