--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
           <center>
             <p>You can contact me using</p>
             <a href="mailto:dasa2004ivanova@gmail.com" 
-            target="_blank"> <img src="image\logos_google-gmail.png" alt="gmail" ></a>
+            target="_blank"> <img src="image\gmail_icon.png" alt="gmail" ></a>
             <a href="https://t.me/nova_Diva" target="_blank"> <img src="image\logos_telegram.png" alt="telegram" ></a>
             <p>You can see my works</p>
             <a href="https://github.com/DaryaIvanovaV" target="_blank"> <img src="image\github.png" alt="github" ></a>
