--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
 <link href='https://fonts.googleapis.com/css?family=Andika' rel='stylesheet'>
 </head>
 <body>
-    <nav class="navbar">
-        <div class="navbar-container container">
-            <input type="checkbox" name="" id="">
-            <div class="hamburger-lines">
+    <nav class="navbar" onclick="toggleMobileMenu(this)">
+        <div class="navbar-container container" >
+            <!--<input type="checkbox" name="" id="" >-->
+            <div class="hamburger-lines" >
                 <span class="line line1"></span>
                 <span class="line line2"></span>
                 <span class="line line3"></span>
             </div>
+            
             <ul class="menu-items">
                 <li><a href="#about_me">About Me</a></li>
                 <li><a href="#portfolio">Portfolio</a></li>
@@ -189,5 +190,6 @@
             
         </div>
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
